--- a/TODO
+++ b/TODO
@@ -7,6 +7,13 @@
      \___/\___/ |___|/__/    \__\
                     World Of Anguis
 ====================================
-==			   Readme			  ==
+==			    ToDo			  ==
 ====================================
+
+General:
+	* Aiming isnt too correct
+	* Player movement (stop when key released)
+	* 
+
+
 
