+ Unit->State : Active,GraphicsOnly,Inactive + UnitDrawInfo->Flag : RemoveNever,RemoveAtLastFrame + DrawMgr : AnimationFrames * Finished explosion graphics with the new implementations * Changed ToDo * PPHM = 1 (for testing reasons)
Signed-off-by: Ferdinand <ferdi89@gmail.com>

--- a/TODO
+++ b/TODO
@@ -24,6 +24,7 @@
 Important:
 	* Explosions on one side affects the other side too (to check it disable dirtyregion update)
 	* Aiming
+	* Unit<->Unit collision, needs a little correction
 	*
 Notimportant:
 	* Player movement (stop when key released)
